# pavlov

./: .env.example  .gitignore  DEPLOYMENT.md  PLAN.md  PROGRESS.md  README .md  README.md  coverage_before.txt  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run-tests.sh  setup-test-env.sh  test-simple.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  ISOLATION_REPORT.md  PERFORMANCE_REPORT.md  README.md  TEST_QUALITY_REPORT.md  coverage_before.txt  isolation_verification.py
backend/alembic/: env.py
backend/alembic/versions/: 48507568bca7_add_notifications_table.py  9632ae77fe88_add_high_water_mark_to_positions.py  a1b2c3d4e5f6_add_ai_cost_usd_to_analysis_log.py  b5f8e1d2a9c3_add_backtest_results_table.py  cb3996e50464_initial_schema.py  f6e5d4c3b2a1_add_performance_indexes.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/middleware/: cors.py  error_handlers.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  container.py  database.py  dependencies.py  metrics.py
backend/app/domain/ai/: anthropic_client.py  client.py  exceptions.py  pipeline.py  prompt_builder.py  schemas.py  validators.py
backend/app/domain/backtest/: __init__.py  exceptions.py  metrics.py  portfolio.py  schemas.py  simulator.py
backend/app/domain/behavior/: analyzer.py  cooling_off.py  schemas.py
backend/app/domain/filter/: chain.py  exceptions.py  interfaces.py  ma_alignment_filter.py  volatility_filter.py  volume_filter.py
backend/app/domain/indicator/: atr.py  engine.py  exceptions.py  interfaces.py  moving_average.py  rsi.py  volume_ratio.py
backend/app/domain/market/: __init__.py  exceptions.py  interfaces.py  service.py  validator.py
backend/app/domain/notification/: __init__.py  exceptions.py  interfaces.py  schemas.py  service.py
backend/app/domain/position/: __init__.py  exceptions.py  interfaces.py  pnl_calculator.py  schemas.py  service.py  tp_sl_engine.py  trailing_stop_engine.py
backend/app/domain/shared/: exceptions.py  result.py
backend/app/domain/strategy/: change_detector.py  engine.py  interfaces.py  schemas.py
backend/app/domain/user/: exceptions.py  interfaces.py  schemas.py  service.py
backend/app/infra/ai/: cost_tracker.py
backend/app/infra/crypto/: encryption.py
backend/app/infra/db/: base.py  health_checker.py  indexes.py  query_logger.py
backend/app/infra/market/: kr_adapter.py  us_adapter.py
backend/app/infra/notification/: __init__.py  email_notifier.py  in_app_notifier.py
backend/app/scheduler/: recovery.py  runner.py  scheduler.py
backend/app/scheduler/jobs/: cache_warmup_job.py  kr_analysis_job.py  us_analysis_job.py
backend/tests/: conftest.py
backend/tests/integration/: test_database.py  test_db_migrations.py  test_full_system_flow.py
backend/tests/unit/: test_config.py  test_container.py  test_main.py
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/api/: behavior.ts  decisions.ts  metrics.ts  notifications.ts  positions.ts  scheduler.ts  strategy.ts
frontend/src/components/: EntryRow.tsx  NotificationBell.css  NotificationBell.tsx  PositionForm.tsx  PositionList.tsx  PositionListWithPnL.tsx  SchedulerPanel.tsx  StrategyDashboard.tsx  TpSlPanel.tsx
frontend/src/hooks/: useNotifications.ts  usePolling.ts  usePositions.ts  useStrategy.ts
frontend/src/types/: index.ts
scripts/: backup.sh  deploy.sh  health_check.sh
(+127 files in other folders)
